[package]
name = "flarmnet"
version = "0.6.0"
description = "FlarmNet file decoder/encoder"
authors = ["Tobias Bieniek <tobias.bieniek@gmail.com>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/glide-rs/flarmnet-rs.git"
keywords = ["flarm", "flarmnet", "ogn", "glider", "gliding"]
edition = "2024"
rust-version = "1.91.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["lx", "tdb", "xcsoar"]
lx = ["minidom", "quick-xml"]
tdb = []
xcsoar = ["encoding_rs"]

[dependencies]
encoding_rs = { version = "0.8.34", optional = true }
minidom = { version = "0.12.0", optional = true }
quick-xml = { version = "0.30.0", optional = true }
thiserror = "2.0.0"

[dev-dependencies]
anyhow = "1.0.82"
clap = { version = "4.4.18", features = ["derive"] }
insta = "1.38.0"
